# cargo-features = ["strip"]

[package]
name = "rs115_bot"
version = "2.1.1"
edition = "2021"

[profile.release]
# strip = true  # Automatically strip symbols from the binary.
lto = true
codegen-units = 1

[dependencies]
anyhow = "1"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bencode = "^0.2.3"
serde_bytes = "0.11"

teloxide = { version = "0.5.3", features = ["macros", "auto-send", "throttle"] }
log = "0.4.8"
pretty_env_logger = "0.4.0"
tokio = { version =  "1.3.0", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1.8"
mime = "0.3.16"
pakr-iec = "1.0.1"
scopeguard = "1.1.0"

strum = { version = "0.22", features = ["derive"] }
rust-crypto = "0.2"

regex = "1"
lazy_static = "1.4.0"

magnet-url = "2.0.0"
