# cargo-features = ["strip"]

[package]
name = "rs115_bot"
version = "2.4.0"
edition = "2021"

[profile.release]
# strip = true  # Automatically strip symbols from the binary.
lto = true
codegen-units = 1

[dependencies]
anyhow = "1"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bencode = "^0.2.3"
serde_bytes = "0.11"

teloxide = { version = "0.5.3", features = ["macros", "auto-send", "throttle"] }
reqwest = "0.11"

sqlx = { version = "0.5", features = [ "runtime-tokio-native-tls","macros" , "sqlite" ] }
tokio = { version =  "1.3.0", features = ["rt-multi-thread", "macros", "time"] }
tokio-stream = "0.1.8"

log = "0.4.8"
pretty_env_logger = "0.4.0"
mime = "0.3.16"
pakr-iec = "1.0.1"
scopeguard = "1.1.0"
strum = { version = "0.22", features = ["derive"] }
rust-crypto = "0.2"
regex = "1"
lazy_static = "1.4.0"
magnet-url = "2.0.0"
data-encoding = "2.3.2"

chrono = "0.4.19"

openssl = { version = "0.10.38", features = ["vendored"] }
base64 = "0.13.0"
